--- a/src/resources/css/theme/uidark/jquery-ui.theme.css
+++ b/src/resources/css/theme/uidark/jquery-ui.theme.css
@@ -30,7 +30,7 @@
 }
 .ui-widget-content {
 	border: 1px solid #666666;
-	background: #000000 url("images/ui-bg_inset-soft_25_000000_1x100.png") 50% bottom repeat-x;
+	background: #000000;
 	color: #ffffff;
 }
 .ui-widget-content a {
